# lonko

./: .cz.toml  .envrc  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
crates/lonko/: Cargo.toml
crates/lonko-hook/: Cargo.toml
crates/lonko-hook/src/: main.rs
crates/lonko/src/: app.rs  config.rs  event.rs  focus.rs  install.rs  install_remote.rs  main.rs  new_agent.rs  respond.rs  state.rs  worktree.rs
crates/lonko/src/agents/: claude.rs  mod.rs
crates/lonko/src/app/: chat_view.rs  inflight.rs  navigate.rs  panel.rs  remote.rs
crates/lonko/src/control/: tmux.rs
crates/lonko/src/sources/: chat.rs  chat_link.rs  chat_peer.rs  hooks.rs  lifecycle.rs  mod.rs  remote_bridge.rs  remote_tmux.rs  tailnet.rs  tmux_scanner.rs  transcript.rs
crates/lonko/src/ui/: chat.rs  detail.rs  footer.rs  header.rs  help.rs  list.rs  mod.rs  new_agent.rs  pr_picker.rs  remote.rs  tmux_sessions.rs  worktree_picker.rs
crates/shepherd/: Cargo.toml
crates/shepherd-hook/: Cargo.toml
crates/shepherd-hook/src/: main.rs
crates/shepherd/src/: app.rs  event.rs  focus.rs  install.rs  main.rs  respond.rs  state.rs  worktree.rs
crates/shepherd/src/control/: ghostty.rs  mod.rs  tmux.rs
crates/shepherd/src/sources/: hooks.rs  (+2 more)
docs/proposals/: channels.md  remote-sessions-ux-plan.md  remote-sessions-ux.md
lonko-channel/: .mcp.json  README.md  index.ts  package-lock.json  package.json  tsconfig.json
lonko-channel/scripts/: poke-once.mjs  poke.mjs  spike.mjs
scripts/: lonko-follow.sh  lonko-panel.sh  shepherd-follow.sh  shepherd-panel.sh
(+5 files in other folders)
