[package]
name = "lonko-hook"
version = "0.11.0"
edition = "2024"
description = "Lightweight Claude Code hook forwarder for lonko"
license = "MIT"

[[bin]]
name = "lonko-hook"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
