[package]
name = "lonko"
version = "0.6.1"
edition = "2024"
description = "TUI dashboard to monitor and control Claude Code sessions"
license = "MIT"

[[bin]]
name = "lonko"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
color-eyre = "0.6"

notify = "6"
notify-debouncer-full = "0.3"
sysinfo = "0.32"
notify-rust = "4"

throbber-widgets-tui = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
unicode-width = "0.2"
